--- a/index.html
+++ b/index.html
@@ -436,90 +436,75 @@
             </li>
           </ul>
         </div>
-
       </section>
     </main>
     <footer class="footer">
       <div class="container first-footer">
         <div class="contacts-container">
-        <a href="/" class="logo-footer-link link"
-          ><span class="logo">Web</span>Studio</a
-        >
-        <address class="footer-adress">
-          <ul class="footer-adress-list list">
-            <li class="footer-adress-item">
-              <a
-                href="https://goo.gl/maps/jqb1bgyML6JfJJXPA"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="footer-adress-link link"
-                >м. Київ,пр-т Лесі Українки,26</a
-              >
-            </li>
-            <li class="footer-adress-item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="contacts-link-mail-footer link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-adress-item">
-              <a href="tel:+380961111111" class="contacts-link-tel-footer link"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+          <a href="/" class="logo-footer-link link"
+            ><span class="logo">Web</span>Studio</a
+          >
+          <address class="footer-adress">
+            <ul class="footer-adress-list list">
+              <li class="footer-adress-item">
+                <a
+                  href="https://goo.gl/maps/jqb1bgyML6JfJJXPA"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="footer-adress-link link"
+                  >м. Київ,пр-т Лесі Українки,26</a
+                >
+              </li>
+              <li class="footer-adress-item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="contacts-link-mail-footer link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-adress-item">
+                <a
+                  href="tel:+380961111111"
+                  class="contacts-link-tel-footer link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
         </div>
         <div class="footer-social-links">
           <p class="footer-social-links-header">приєднуйтесь</p>
           <ul class="footer-social-links-list list">
             <li class="footer-social-links-item">
-                    <a href="#" class="footer-social-links-icon">
-                      <svg
-                        width="20px"
-                        height="20px"
-                        class="logo-contacts-footer"
-                      >
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-links-item">
-                    <a href="#" class="footer-social-links-icon">
-                      <svg
-                        width="20px"
-                        height="20px"
-                        class="logo-contacts-footer"
-                      >
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-links-item">
-                    <a href="#" class="footer-social-links-icon">
-                      <svg
-                        width="20px"
-                        height="20px"
-                        class="logo-contacts-footer"
-                      >
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-links-item">
-                    <a href="#" class="footer-social-links-icon">
-                      <svg
-                        width="20px"
-                        height="20px"
-                        class="logo-contacts-footer"
-                      >
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              <a href="#" class="footer-social-links-icon">
+                <svg width="20px" height="20px" class="logo-contacts-footer">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-links-item">
+              <a href="#" class="footer-social-links-icon">
+                <svg width="20px" height="20px" class="logo-contacts-footer">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-links-item">
+              <a href="#" class="footer-social-links-icon">
+                <svg width="20px" height="20px" class="logo-contacts-footer">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-links-item">
+              <a href="#" class="footer-social-links-icon">
+                <svg width="20px" height="20px" class="logo-contacts-footer">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
