--- a/portfolio.html
+++ b/portfolio.html
@@ -41,19 +41,17 @@
             </li>
           </ul>
         </nav>
-       <ul class="contacts-list list">
+        <ul class="contacts-list list">
           <li class="contacts-item">
             <a href="mailto:info@devstudio.com" class="contacts-link link">
               <svg width="16" height="12" class="contacts-link-icon">
-                <use href="./images/icons.svg#icon-envelope"></use>
-              </svg>info@devstudio.com
+                <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com
             </a>
           </li>
           <li class="contacts-item">
             <a href="tel:+380961111111" class="contacts-link link">
               <svg width="10" height="16" class="contacts-link-icon">
-                <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg>+38 096 111 11 11
+                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11
             </a>
           </li>
         </ul>
@@ -218,87 +216,73 @@
         </div>
       </section>
     </main>
-     <footer class="footer">
+    <footer class="footer">
       <div class="container first-footer">
         <div class="contacts-container">
-        <a href="/" class="logo-footer-link link"
-          ><span class="logo">Web</span>Studio</a
-        >
-        <address class="footer-adress">
-          <ul class="footer-adress-list list">
-            <li class="footer-adress-item">
-              <a
-                href="https://goo.gl/maps/jqb1bgyML6JfJJXPA"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="footer-adress-link link"
-                >м. Київ,пр-т Лесі Українки,26</a
-              >
-            </li>
-            <li class="footer-adress-item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="contacts-link-mail-footer link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-adress-item">
-              <a href="tel:+380961111111" class="contacts-link-tel-footer link"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+          <a href="/" class="logo-footer-link link"
+            ><span class="logo">Web</span>Studio</a
+          >
+          <address class="footer-adress">
+            <ul class="footer-adress-list list">
+              <li class="footer-adress-item">
+                <a
+                  href="https://goo.gl/maps/jqb1bgyML6JfJJXPA"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="footer-adress-link link"
+                  >м. Київ,пр-т Лесі Українки,26</a
+                >
+              </li>
+              <li class="footer-adress-item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="contacts-link-mail-footer link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-adress-item">
+                <a
+                  href="tel:+380961111111"
+                  class="contacts-link-tel-footer link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
         </div>
         <div class="footer-social-links">
           <p class="footer-social-links-header">приєднуйтесь</p>
           <ul class="footer-social-links-list list">
             <li class="footer-social-links-item">
-                    <a href="#" class="footer-social-links-icon">
-                      <svg
-                        width="20px"
-                        height="20px"
-                        class="logo-contacts-footer"
-                      >
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-links-item">
-                    <a href="#" class="footer-social-links-icon">
-                      <svg
-                        width="20px"
-                        height="20px"
-                        class="logo-contacts-footer"
-                      >
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-links-item">
-                    <a href="#" class="footer-social-links-icon">
-                      <svg
-                        width="20px"
-                        height="20px"
-                        class="logo-contacts-footer"
-                      >
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-links-item">
-                    <a href="#" class="footer-social-links-icon">
-                      <svg
-                        width="20px"
-                        height="20px"
-                        class="logo-contacts-footer"
-                      >
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              <a href="#" class="footer-social-links-icon">
+                <svg width="20px" height="20px" class="logo-contacts-footer">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-links-item">
+              <a href="#" class="footer-social-links-icon">
+                <svg width="20px" height="20px" class="logo-contacts-footer">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-links-item">
+              <a href="#" class="footer-social-links-icon">
+                <svg width="20px" height="20px" class="logo-contacts-footer">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-links-item">
+              <a href="#" class="footer-social-links-icon">
+                <svg width="20px" height="20px" class="logo-contacts-footer">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
